tests/baselines/reference/parserES3Accessors1.errors.txt
tests/cases/conformance/parser/ecmascript3/Accessors/parserES3Accessors1.ts(2,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/parser/ecmascript3/Accessors/parserES3Accessors1.ts(2,9): error TS2378: A 'get' accessor must return a value.


==== tests/cases/conformance/parser/ecmascript3/Accessors/parserES3Accessors1.ts (2 errors) ====
    class C {
        get Foo() { }
            ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            ~~~
!!! error TS2378: A 'get' accessor must return a value.
    }